--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,7 +4,16 @@
 
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
-		
+		"bmewburn.vscode-intelephense-client",
+		"zobo.php-intellisense",
+		"xdebug.php-debug",
+		"wongjn.php-sniffer",
+		"neilbrayfield.php-docblocker",
+		"persoderlind.vscode-phpcbf",
+		"mblode.twig-language-2",
+		"whatwedo.twig",
+		"junstyle.php-cs-fixer",
+		"getpsalm.psalm-vscode-plugin"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
